# SSD_Doghouse-TUI

./: .gitignore  README.md  pyproject.toml
doghousetui/: App.py  Exception.py  Helpmsg_utils.py  Menu.py  Token.py  Utils.py  credentials.py  domain.py
resources/: dogs_breeds.json
test/: test_menu.py
tests/: test_app.py  test_credentials.py  test_domain.py  test_menu.py  test_token.py
validation/: regex.py
