[tool.poetry]
name = "doghouse-tui"
version = "0.1.0"
description = ""
authors = ["bfrancesco <brunofrancescobarbara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
valid8 = "^5.1.2"
pytest = "^7.4.3"
typeguard = "^4.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
